# ska-serverless

./: README.md  bandpass_cal.py  flagging.py  fluxscale.py  setflux.py  tools.md  uvcontsub.py
.github/workflows/: Docker-build.yml  wsclean-3.2-test.yml
Calibration/: README.MD  README.md  applycal.py  fluxscale.py  gaincal.py  importfits.py  listobs.py  tclean.py
Container_Octave/: Dockerfile  README.md
Container_Plot/: Dockerfile  README.md
Container_Plot/app/: app.py
Fission/: README.md  fits.py  parameters.json
Fission/VolumeMounts/: pv.yaml
Fission/VolumeMounts/KinD/: config.yaml
Fission/aoflagger-spec/aoflagger/: aoflagger.py
Fission/aoflagger-spec/specs/: env-aoflagger-env.yaml  fission-deployment-config.yaml  function-aoflagger.yaml  route-aoflagger.yaml
Fission/casa-spec/fits2ms/: fits2ms.py
Fission/casa-spec/setjy/: setjy.py
Fission/casa-spec/specs/: function-applycal.yaml  function-bandpasscal.yaml  function-fits2ms.yaml  function-flagdata.yaml  function-fluxscale.yaml  function-gaincal.yaml  function-listobs.yaml  function-setjy.yaml  function-split.yaml  function-tclean.yaml  function-uvcontsub.yaml  route-fits2ms.yaml  route-flagdata.yaml  route-gaincal.yaml  route-listobs.yaml  (+2 more)
Fission/enviroments/: Dockerfile  requirements.txt
pipeline/: README.md
pipeline/template/: dockerfile.example
ska-faas-package/: README.md  pyproject.toml
ska-faas-package/src/ska_serverless/: binary_app.py  casafn.py  config.py
ska-faas-package/tests/: casa_test.py  config.ini  test.py  time_test.py  time_test2.py  times.txt  wsclean_test.py
(+166 files in other folders)
